@@ -4,19 +4,16 @@ package com.paragon.impl.module.hud.impl
 
 import com.paragon.bus.listener.Listener
 import com.paragon.impl.event.network.PacketEvent
-import com.paragon.util.render.font.FontUtil
-import com.paragon.impl.module.hud.HUDModule
 import com.paragon.impl.module.client.Colours
 import com.paragon.impl.module.hud.HUDEditorGUI
+import com.paragon.impl.module.hud.HUDModule
 import com.paragon.impl.setting.Setting
+import com.paragon.util.calculations.Timer
 import com.paragon.util.render.RenderUtil
+import com.paragon.util.render.font.FontUtil
 import me.surge.animation.Animation
 import me.surge.animation.Easing
-import net.minecraft.client.Minecraft
-import net.minecraft.network.play.server.SPacketKeepAlive
-import net.minecraft.util.text.TextFormatting
 import java.text.SimpleDateFormat
-import java.time.format.DateTimeFormatter
 import java.util.*
 
 /**
@@ -25,13 +22,12 @@ import java.util.*
 object LagNotifier : HUDModule("LagNotifier", "Tells you when the server is lagging") {
 
     private val threshold = Setting("Threshold", 1000.0, 50.0, 2000.0, 10.0) describedBy "How many milliseconds have to have passed before we consider the server to be lagging"
-
-    private var lastPacket = 0L
-
     private val slide = Animation(200f, false, Easing.CUBIC_IN_OUT)
 
+    private val lastPacketTimer = Timer()
+
     override fun render() {
-        slide.state = (System.currentTimeMillis() - lastPacket) > threshold.value
+        slide.state = lastPacketTimer.hasMSPassed(threshold.value)
 
         if (minecraft.currentScreen is HUDEditorGUI) {
             FontUtil.drawStringWithShadow("Server has been lagging for [sec]s", x, y, Colours.mainColour.value)
@@ -54,13 +50,12 @@ object LagNotifier : HUDModule("LagNotifier", "Tells you when the server is lagg
 
     @Listener
     fun onPacketReceive(event: PacketEvent.PreReceive) {
-        lastPacket = System.currentTimeMillis()
-        slide.state = false
+        lastPacketTimer.reset()
     }
 
     private fun getText() = "Server has been lagging for ${
         SimpleDateFormat("s")
-            .format(Date(lastPacket))
+            .format(Date(lastPacketTimer.getTime()))
     }"
 
 }
